# pt-me_cli

./: .gitignore  AI_AGENT_IMPROVEMENT_PLAN.md  EXAMPLES.md  HOW_TO_TEST.md  IMPLEMENTATION.md  MINIMAL_EMOJI_STYLE.md  README.md  TEST_PLAN.md  TEST_REPORT.md  e2e-real-test.md  final-test.md  pt-me  pyproject.toml  test-article.md  test-minimal.md  test.md
docs/reports/: api_guardian_report_at20260310_160836.md  maintainer_report_at20260310_160836.md  security_auditor_report_at20260310_160836.md  simplicity_advocate_report_at20260310_160836.md
sdd_package_20260310_160836/: START.md  kanban.json
sdd_package_20260310_160836/03_done/: P0_001_validate_contract.md  P0_002_fix_path_bound_tests.md  P1_001_harden_film_url_boundary.md  P2_001_align_quiet_mode_and_docs.md
sdd_package_20260310_160836/reports/: 6_reviewers_combined_report_20260310_160836.md  performance_engineer_report_at20260310_160836.md  testability_engineer_report_at20260310_160836.md
src/p2me/: __init__.py  __main__.py  chain.py  cli.py  film_parser.py  schema.py
src/pt_me/: __init__.py  cli.py
src/pt_me/core/: __init__.py  contracts.py  observability.py
src/pt_me/input/: __init__.py  loader.py  resolver.py  validator.py
src/pt_me/notifier/: __init__.py
src/pt_me/processor/: __init__.py  formatter.py  publisher.py  summarizer.py
tests/: __init__.py  conftest.py  test_core.py  test_e2e.py  test_input_loader.py  test_input_resolver.py  test_integration.py  test_p2me_cli.py  test_processor.py
